vlib/v/checker/tests/match_last_branch_only_casted.out
vlib/v/checker/tests/match_last_branch_only_casted.vv:6:10: error: casted type `u8` is not same as base type `int literal`
    4 |         'a' { 10 }
    5 |         'b' { 500 }
    6 |         else { u8(0) }
      |                ~~~~~
    7 |     }
    8 |
